--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
         run: mvn -B test --file pom.xml
 
       - name:  Build the application
-        run:
+        run: |
           mvn clean
           mvn -B package --file pom.xml
